Add Fugue DNS ACME challenge API
